--- a/stack.yml
+++ b/stack.yml
@@ -1,9 +1,27 @@
+Description: >
+    Martin Ansong / Udacity 2020
 Parameters:
-    s3BucketUrl:
+    MinAutoScalingGroupSize:
+        Description: Minimum size for AutoScalingGroup. Default is 3
+        Type: String
+        Default: '3'
+    MaxAutoScalingGroupSize:
+        Description: Maximum size for AutoScalingGroup. Default is 3
+        Type: String
+        Default: '5'
+    EnvironmentName:
+        Description: An environment name that will be prefixed to resource names
+        Type: String
+        Default: UdacityProject
+    S3BucketUrl:
         NoEcho: true
         Type: String
         Default: s3://udacity-demo-1/udacity.zip
-        Description: s3BucketUrl used to download zipped file from
+        Description: s3Bucket url used to download zipped file from
+    EbsVolumeSize:
+        Type: String
+        Default: '10'
+        Description: Size of Ebs volume mount. Default is 10 (Gb)
     InstanceTypeParameter:
         Type: String
         Default: t2.micro
@@ -13,15 +31,19 @@ Parameters:
             - t2.medium
         Description: Enter t2.micro, t2.nano, or t2.medium. Default is t2.micro
 Resources:
-    AppNode:
-        Type: AWS::EC2::Instance
+    WebAppLaunchConfig:
+        Type: AWS::AutoScaling::LaunchConfiguration
         Properties:
             InstanceType:
                 Ref: InstanceTypeParameter
             ImageId: ami-0d1cd67c26f5fca19
             KeyName: udacity-2
             SecurityGroups:
-                - Ref: AppNodeSG
+                - Ref: WebServerSecGroup
+            BlockDeviceMappings:
+            - DeviceName: "/dev/sdk"
+              Ebs:
+                VolumeSize: !Ref EbsVolumeSize
             UserData: 
                 Fn::Base64: 
                     Fn::Sub:
@@ -34,17 +56,43 @@ Resources:
                         cd /var/www/html
                         aws s3 cp ${s3Bucket} .
                         unzip -o udacity.zip
-                    -  s3Bucket: !Ref s3BucketUrl
-    AppNodeSG:
+                    -  s3Bucket: !Ref S3BucketUrl
+            Tags: 
+                - Key: Name 
+                  Value: !Ref EnvironmentName
+    WebAppGroup:
+        Type: AWS::AutoScaling::AutoScalingGroup
+        Properties:
+            VPCZoneIdentifier:
+            - Fn::ImportValue:
+                !Sub "${EnvironmentName}-PRIV-NETS"
+            LaunchConfigurationName:
+                Ref: WebAppLaunchConfig
+            MinSize: !Ref MinAutoScalingGroupSize
+            MaxSize: !Ref MaxAutoScalingGroupSize
+            TargetGroupARNs:
+            - Ref: WebAppTargetGoup
+    WebServerSecGroup:
         Type: AWS::EC2::SecurityGroup
         Properties:
-            GroupDescription: For app nodes that allow ssh and http
+            GroupDescription: Allow http to our hosts and SSH from local only
+            VpcId:
+                Fn::!ImportValue:
+                    !Sub "${EnvironmentName}-VPCID" 
             SecurityGroupIngress:
             - IpProtocol: tcp
-              FromPort: '80'
-              ToPort: '80'
+              FromPort: 80
+              ToPort: 80
               CidrIp: 0.0.0.0/0
             - IpProtocol: tcp
-              FromPort: '22'
-              ToPort: '22'
+              FromPort: 22
+              ToPort: 22
               CidrIp: 0.0.0.0/0
+            SecurityGroupEgress:
+            - IpProtocol: tcp
+              FromPort: 0
+              ToPort: 65535
+              CidrIp: 0.0.0.0/0
+            Tags:
+                - Key: Name
+                  Value: !Ref EnvironmentName
