--- a/stack.yml
+++ b/stack.yml
@@ -170,18 +170,20 @@ Resources:
                   Value: !Ref EnvironmentName
     Outputs:
         StackName:
-            Description: 'Stack name.'
-            Value: !Sub '${AWS::StackName}'
+            Description: 'Stack name'
+            Value: !Ref MyStack
+            Export:
+                Name: !Sub "${AWS::StackName}"
         DNSName:
             Description: 'The DNS name for the ECS cluster/service load balancer.'
             Value: !GetAtt 'WebAppLB.DNSName'
             Export:
-              Name: !Sub '${AWS::StackName}-DNSName'
+              Name: !Sub "${AWS::StackName}-DNSName"
         LoadBalancerUrl:
             Description: The URL of the ALB
             Value: !Sub 'http://${WebAppLB.DNSName}'
             Export:
-                Name: !Sub '${AWS::StackName}-URL'
+                Name: !Sub "${AWS::StackName}-URL"
         Listener:
             Description: A reference to a port 80 Listener
             Value: !Ref Listener
