--- a/stack.yml
+++ b/stack.yml
@@ -188,7 +188,7 @@ Outputs:
         value: !Ref "AWS::Region"
     StackName:
         Description: 'Stack name'
-        Value: !Sub "${AWS::StackName}"
+        Value: !Sub "AWS::StackName"
     DNSName:
         Description: 'The DNS name for the ECS cluster/service load balancer.'
         Value: !GetAtt 'WebAppLB.DNSName'
@@ -196,7 +196,7 @@ Outputs:
             Name: !Sub "${AWS::StackName}-DNSName"
     LoadBalancerUrl:
         Description: The URL of the ALB
-        Value: !Sub 'http://${WebAppLB.DNSName}'
+        Value: !Sub "http://${WebAppLB.DNSName}"
         Export:
             Name: !Sub "${AWS::StackName}-URL"
     Listener:
