Fix incorrect function calls

--- a/stack.yml
+++ b/stack.yml
@@ -51,6 +51,9 @@ Resources:
             InstanceType:
                 Ref: InstanceTypeParameter
             ImageId: !FindInMap
+                - RegionMap
+                - !Ref 'AWS::Region'
+                - AMI
             KeyName: !Ref Keyname
             SecurityGroups:
                 - Ref: WebServerSecGroup
@@ -143,7 +146,7 @@ Resources:
         Properties:
             GroupDescription: Allow http to our hosts and SSH from local only
             VpcId:
-                Fn::!ImportValue:
+                Fn::ImportValue:
                     !Sub "${EnvironmentName}-VPCID" 
             SecurityGroupIngress:
             - IpProtocol: tcp
@@ -167,7 +170,7 @@ Resources:
         Properties:
             GroupDescription: Allow http to our LoadBalancers
             VpcId:
-                Fn::!ImportValue:
+                Fn::ImportValue:
                     !Sub "${EnvironmentName}-VPCID" 
             SecurityGroupIngress:
             - IpProtocol: tcp
