--- a/CloudFormationInfrastructure.yml
+++ b/CloudFormationInfrastructure.yml
@@ -185,6 +185,36 @@ Resources:
             Tags:
                 - Key: Name
                   Value: !Ref EnvironmentName
+    ProfileWithRolesForOurApp:
+        Type: AWS::IAM::InstanceProfile
+        Properties:
+            Path: "/"
+            Roles: !Ref UdacityS3ReadOnlyEC2
+    UdacityS3ReadOnlyPolicy:
+        Type: AWS::IAM::Policy
+        Properties:
+        PolicyName: ListS3BucketsPolicy
+        PolicyDocument:
+            Statement:
+            - Effect: Allow
+            Action:
+            - s3:List*
+            Resource: "*"
+        Roles:
+        - Ref: UdacityS3ReadOnlyEC2
+    UdacityS3ReadOnlyEC2:
+        Type: AWS::IAM::Role
+        Properties:
+        AssumeRolePolicyDocument:
+            Version: '2012-10-17'
+            Statement:
+            - Effect: Allow
+            Principal:
+                Service:
+                - ec2.amazonaws.com
+            Action:
+            - sts:AssumeRole
+        Path: "/"
 Outputs:
     StacksRegion:
         Description: 'Region where stack is located'
