--- a/CloudFormationInfrastructure.yml
+++ b/CloudFormationInfrastructure.yml
@@ -279,8 +279,8 @@ Resources:
         Type: AWS::ElasticLoadBalancingV2::LoadBalancer
         Properties:
             Subnets:
-                - !Sub PublicSubnet1
-                - !Sub PublicSubnet2
+                - !Ref PublicSubnet1
+                - !Ref PublicSubnet2
             SecurityGroups:
                 - Ref: LBSecGroup
     Listener:
