Add more checks around validating template body

--- a/CloudFormationInfrastructure.yml
+++ b/CloudFormationInfrastructure.yml
@@ -90,20 +90,6 @@ Parameters:
         Description: The number of bastion hosts to create. The maximum number is four.
         Type: String
 
-    LinuxAMINameMap:
-        Amazon-Linux2-HVM:
-            Code: AMZNLINUX2
-        Amazon-Linux-HVM:
-            Code: AMZNLINUXHVM
-        CentOS-7-HVM:
-            Code: CENTOS7HVM
-        Ubuntu-Server-18.04-LTS-HVM:
-            Code: US1804HVM
-        Ubuntu-Server-16.04-LTS-HVM:
-            Code: US1604HVM
-        SUSE-SLES-15-HVM:
-            Code: SLES15HVM
-
     KeyPairName:
         Description: Keyname used to ssh
         Type: AWS::EC2::KeyPair::KeyName
@@ -161,6 +147,16 @@ Parameters:
         Description: Please enter the IP range (CIDR notation) for the private subnet in the second Availability Zone
         Type: String
 
+Conditions:
+    2BastionCondition: !Or
+        - !Equals [!Ref NumBastionHosts, '2']
+        - !Condition 3BastionCondition
+        - !Condition 4BastionCondition
+    3BastionCondition: !Or
+        - !Equals [!Ref NumBastionHosts, '3']
+        - !Condition 4BastionCondition
+    4BastionCondition: !Equals [!Ref NumBastionHosts, '4']
+
 Mappings:
     RegionMap:
         us-east-1:
@@ -190,6 +186,20 @@ Mappings:
             CENTOS7HVM: ami-01ed306a12b7d1c96
             SLES15HVM: ami-0f1e3b3fb0fec0361
             US1804HVM: ami-0d1cd67c26f5fca19
+    LinuxAMINameMap:
+        Amazon-Linux2-HVM:
+            Code: AMZNLINUX2
+        Amazon-Linux-HVM:
+            Code: AMZNLINUXHVM
+        CentOS-7-HVM:
+            Code: CENTOS7HVM
+        Ubuntu-Server-18.04-LTS-HVM:
+            Code: US1804HVM
+        Ubuntu-Server-16.04-LTS-HVM:
+            Code: US1604HVM
+        SUSE-SLES-15-HVM:
+            Code: SLES15HVM
+
 Resources:
 
     VPC: 
@@ -352,7 +362,7 @@ Resources:
         Properties:
             RouteTableId: !Ref PrivateRouteTable2
             SubnetId: !Ref PrivateSubnet2
-    
+
     WebAppLaunchConfig:
         Type: AWS::AutoScaling::LaunchConfiguration 
         Properties:
@@ -456,10 +466,6 @@ Resources:
               FromPort: 80
               ToPort: 80
               CidrIp: 0.0.0.0/0
-            - IpProtocol: tcp
-              FromPort: 22
-              ToPort: 22
-              CidrIp: 0.0.0.0/0
             SecurityGroupEgress:
             - IpProtocol: tcp
               FromPort: 0
@@ -468,7 +474,25 @@ Resources:
             Tags:
                 - Key: Name
                   Value: !Ref EnvironmentName
-
+    WebAppCPULowAlarm:
+        Type: 'AWS::CloudWatch::Alarm'
+        Properties:
+            AlarmName: 'WebAppCPUUsageLow'
+            AlarmDescription: 'CPU usage is less than 25% for 5 minutes'
+            MetricName: 'CPUUtilization'
+            Namespace: 'AWS/EC2'
+            Statistic: 'Average'
+            Period: '300'
+            EvaluationPeriods: '1'
+            Threshold: '25'
+            ComparisonOperator: 'GreaterThanThreshold'
+            AlarmActions:
+                - Ref: 'WebAppScaleDown'
+            Dimensions:
+                - Name: 'AutoScalingGroupName'
+                  Value: 
+                    - !Ref WebServerSecGroup
+    
     LBSecGroup:
         Type: AWS::EC2::SecurityGroup
         Properties:
@@ -488,13 +512,6 @@ Resources:
                 - Key: Name
                   Value: !Ref EnvironmentName
 
-    ProfileWithRolesForOurApp:
-        Type: AWS::IAM::InstanceProfile
-        Properties:
-            Path: "/"
-            Roles: 
-                - !Ref UdacityS3ReadOnlyEC2
-
     UdacityS3ReadOnlyPolicy:
         Type: AWS::IAM::Policy
         Properties:
@@ -504,7 +521,7 @@ Resources:
                 Statement:
                 - Effect: Allow
                   Action:
-                  - s3:List*
+                  - s3:*
                   Resource: "*"
             Roles:
             - !Ref UdacityS3ReadOnlyEC2
@@ -522,9 +539,264 @@ Resources:
                   Action:
                   - sts:AssumeRole
             Path: "/"
+    
+    ProfileWithRolesForOurApp:
+        DependsOn: UdacityS3ReadOnlyPolicy
+        Type: AWS::IAM::InstanceProfile
+        Properties:
+            Path: "/"
+            Roles: 
+                - !Ref UdacityS3ReadOnlyEC2
+
+    BastionMainLogGroup:
+        Type: 'AWS::Logs::LogGroup'
+
+    SSHMetricFilter:
+        Type: 'AWS::Logs::MetricFilter'
+        Properties:
+            LogGroupName: !Ref BastionMainLogGroup
+            FilterPattern: ON FROM USER PWD
+            MetricTransformations:
+                - MetricName: SSHCommandCount
+                  MetricValue: '1'
+                  MetricNamespace: !Join
+                    - /
+                    - - !Ref EnvironmentName
+                      - !Ref AWS::StackName
+
+    BastionHostRole:
+        Type: 'AWS::IAM::Role'
+        Properties:
+            Path: /
+            AssumeRolePolicyDocument:
+                Statement:
+                    - Action:
+                        - 'sts:AssumeRole'
+                Principal:
+                    Service:
+                        - ec2.amazonaws.com
+                    Effect: Allow
+                Version: 2012-10-17
+            ManagedPolicyArns:
+                - !Sub 'arn:${AWS::Partition}:iam::aws:policy/service-role/AmazonEC2RoleforSSM'
+    
+    BastionHostPolicy:
+        Type: 'AWS::IAM::Policy'
+        Properties:
+            PolicyName: BastionPolicy
+            PolicyDocument:
+                Version: 2012-10-17
+                Statement:
+                    - Action:
+                        - 's3:GetObject'
+                      Resource: !Sub "arn:${AWS::Partition}:s3:::${QSS3BucketName}/${QSS3KeyPrefix}*"
+                      Effect: Allow
+                    - Action:
+                        - 'logs:CreateLogStream'
+                        - 'logs:GetLogEvents'
+                        - 'logs:PutLogEvents'
+                        - 'logs:DescribeLogGroups'
+                        - 'logs:DescribeLogStreams'
+                        - 'logs:PutRetentionPolicy'
+                        - 'logs:PutMetricFilter'
+                        - 'logs:CreateLogGroup'
+                      Resource: !Sub "arn:${AWS::Partition}:logs:${AWS::Region}:${AWS::AccountId}:log-group:${BastionMainLogGroup}:*"
+                      Effect: Allow
+                    - Action:
+                        - 'ec2:AssociateAddress'
+                        - 'ec2:DescribeAddresses'
+                      Resource: '*'
+                      Effect: Allow
+            Roles:
+                - !Ref BastionHostRole
+
+    BastionHostProfile:
+        DependsOn: BastionHostPolicy
+        Type: 'AWS::IAM::InstanceProfile'
+        Properties:
+            Roles:
+                - !Ref BastionHostRole
+            Path: /
+    EIP1:
+        Type: 'AWS::EC2::EIP'
+        Properties:
+            Domain: vpc
+    EIP2:
+        Type: 'AWS::EC2::EIP'
+        Condition: 2BastionCondition
+        Properties:
+            Domain: vpc
+    EIP3:
+        Type: 'AWS::EC2::EIP'
+        Condition: 3BastionCondition
+        Properties:
+            Domain: vpc
+    EIP4:
+        Type: 'AWS::EC2::EIP'
+        Condition: 4BastionCondition
+        Properties:
+            Domain: vpc
+
+    BastionAutoScalingGroup:
+        Type: 'AWS::AutoScaling::AutoScalingGroup'
+        Properties:
+            LaunchConfigurationName: !Ref BastionLaunchConfiguration
+            VPCZoneIdentifier:
+                - !Ref PublicSubnet1
+                - !Ref PublicSubnet2
+
+            MinSize: !Ref NumBastionHosts
+            MaxSize: !Ref NumBastionHosts
+            Cooldown: '300'
+            DesiredCapacity: !Ref NumBastionHosts
+            Tags:
+                - Key: Name
+            Value: !Ref BastionHostName
+            PropagateAtLaunch: true
+        CreationPolicy:
+            ResourceSignal:
+                Count: !Ref NumBastionHosts
+                Timeout: PT30M
+            AutoScalingCreationPolicy:
+                MinSuccessfulInstancesPercent: 100
+            UpdatePolicy:
+                AutoScalingReplacingUpdate:
+                    WillReplace: true
+
+    BastionLaunchConfiguration:
+        Type: 'AWS::AutoScaling::LaunchConfiguration'
+        Metadata:
+            'AWS::CloudFormation::Authentication':
+                S3AccessCreds:
+                    type: S3
+                    roleName: 
+                        - !Ref BastionHostRole
+                    buckets:
+                        - !Ref QSS3BucketName
+            'AWS::CloudFormation::Init':
+                config:
+                    files:
+                        /tmp/bastion_bootstrap.sh:
+                            source: !If
+                                - UseAlternativeInitialization
+                                - !Ref AlternativeInitializationScript
+                                - !Sub
+                                - https://${S3Bucket}.s3.${S3Region}.${AWS::URLSuffix}/${QSS3KeyPrefix}scripts/bastion_bootstrap.sh
+                                - S3Bucket:
+                                    - !Sub '${EnvironmentName}-${AWS::Region}'
+                                  S3Region:
+                                    - !Ref 'AWS::Region'
+                            mode: '000550'
+                            owner: root
+                            group: root
+                            authentication: S3AccessCreds
+                commands:
+                    b-bootstrap:
+                        cwd: '/tmp/'
+                        command: !Join
+                            - ''
+                            - - ./bastion_bootstrap.sh
+                            - ' --banner '
+                            - !Ref BastionBanner
+                            - ' --enable '
+                            - !Ref EnableBanner
+                            - ' --tcp-forwarding '
+                            - !Ref EnableTCPForwarding
+                            - ' --x11-forwarding '
+                            - !Ref EnableX11Forwarding
+        Properties:
+            AssociatePublicIpAddress: true
+            PlacementTenancy: !Ref BastionTenancy
+            KeyName: !Ref KeyPairName
+            IamInstanceProfile: !Ref BastionHostProfile
+            ImageId: !If
+                - UseOSImageOverride
+                - !Ref OSImageOverride
+                - !FindInMap
+                - AWSAMIRegionMap
+                - !Ref 'AWS::Region'
+                - !FindInMap
+                    - LinuxAMINameMap
+                    - !Ref BastionAMIOS
+                    - Code
+            SecurityGroups:
+                - !Ref BastionSecurityGroup
+            InstanceType: !Ref BastionInstanceType
+            BlockDeviceMappings:
+                - DeviceName: /dev/xvda
+                  Ebs:
+                    VolumeSize: !Ref RootVolumeSize
+                    VolumeType: gp2
+                    Encrypted: true
+                    DeleteOnTermination: true
+            UserData:
+                Fn::Base64: !Sub
+                - |
+                    #!/bin/bash
+                    set -x
+                    for e in $(echo "${EnvironmentVariables}" | tr ',' ' '); do
+                    export $e
+                    done
+                    export PATH=$PATH:/usr/local/bin
+                    #cfn signaling functions
+                    yum install git -y || apt-get install -y git || zypper -n install git
+
+                    function cfn_fail
+                    {
+                    cfn-signal -e 1 --stack ${AWS::StackName} --region ${AWS::Region} --resource BastionAutoScalingGroup
+                    exit 1
+                    }
+
+                    function cfn_success
+                    {
+                    cfn-signal -e 0 --stack ${AWS::StackName} --region ${AWS::Region} --resource BastionAutoScalingGroup
+                    exit 0
+                    }
+
+                    until git clone https://github.com/aws-quickstart/quickstart-linux-utilities.git ; do echo "Retrying"; done
+                    cd /quickstart-linux-utilities;
+                    source quickstart-cfn-tools.source;
+                    qs_update-os || qs_err;
+                    #qs_bootstrap_pip || qs_err " pip bootstrap failed ";
+                    qs_aws-cfn-bootstrap || qs_err " cfn bootstrap failed ";
+
+                    EIP_LIST="${EIP1},${EIP2},${EIP3},${EIP4}"
+                    CLOUDWATCHGROUP=${BastionMainLogGroup}
+                    cfn-init -v --stack '${AWS::StackName}' --resource BastionLaunchConfiguration --region ${AWS::Region} || cfn_fail
+                    [ $(qs_status) == 0 ] && cfn_success || cfn_fail 
+                - EIP2:
+                    !If
+                    - 2BastionCondition
+                    - !Ref EIP2
+                    - 'Null'
+                  EIP3:
+                    !If
+                    - 3BastionCondition
+                    - !Ref EIP3
+                    - 'Null'
+                  EIP4:
+                    !If
+                    - 4BastionCondition
+                    - !Ref EIP4
+                    - 'Null'
+
+    BastionSecurityGroup:
+        Type: 'AWS::EC2::SecurityGroup'
+        Properties:
+            GroupDescription: Enables SSH Access to Bastion Hosts
+            VpcId: !Ref VPC
+            SecurityGroupIngress:
+                - IpProtocol: tcp
+                  FromPort: 22
+                  ToPort: 22
+                  CidrIp: !Ref 0.0.0.0/0
+                - IpProtocol: icmp
+                  FromPort: -1
+                  ToPort: -1
+                  CidrIp: !Ref 0.0.0.0/0
 
 Outputs:
-    
+
     VPC: 
         Description: A reference to the created VPC
         Value: !Ref VPC
@@ -608,3 +880,57 @@ Outputs:
     Listener:
         Description: A reference to a port 80 Listener
         Value: !Ref Listener
+
+    WebAppCPUHighAlarm:
+        Description: 'CloudWatch to send alarms when EC2 CPU is High'
+        Value: !Ref WebAppCPUHighAlarm
+
+    BastionAutoScalingGroup:
+        Description: Auto Scaling Group Reference ID
+        Value: !Ref BastionAutoScalingGroup
+        Export:
+            Name: !Sub '${AWS::StackName}-BastionAutoScalingGroup'
+    EIP1:
+        Description: Elastic IP 1 for Bastion
+        Value: !Ref EIP1
+        Export:
+            Name: !Sub '${AWS::StackName}-EIP1'
+
+    EIP2:
+        Condition: 2BastionCondition
+        Description: Elastic IP 2 for Bastion
+        Value: !Ref EIP2
+        Export:
+            Name: !Sub '${AWS::StackName}-EIP2'
+    
+    EIP3:
+        Condition: 3BastionCondition
+        Description: Elastic IP 3 for Bastion
+        Value: !Ref EIP3
+        Export:
+            Name: !Sub '${AWS::StackName}-EIP3'
+    
+    EIP4:
+        Condition: 4BastionCondition
+        Description: Elastic IP 4 for Bastion
+        Value: !Ref EIP4
+        Export:
+            Name: !Sub '${AWS::StackName}-EIP4'
+    
+    CloudWatchLogs:
+        Description: CloudWatch Logs GroupName. SSH logs stored here.
+        Value: !Ref BastionMainLogGroup
+        Export:
+            Name: !Sub '${AWS::StackName}-CloudWatchLogs'
+    
+    BastionSecurityGroupID:
+        Description: Bastion Security Group ID
+        Value: !Ref BastionSecurityGroup
+        Export:
+            Name: !Sub '${AWS::StackName}-BastionSecurityGroupID'
+    
+    BastionHostRole:
+        Description: Bastion IAM Role name
+        Value: !Ref BastionHostRole
+        Export:
+            Name: !Sub '${AWS::StackName}-BastionHostRole'
